infrastructure/observability/kube-prometheus-stack/resources/oauth2-proxy-alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-alertmanager
  namespace: monitoring
  labels:
    app: oauth2-proxy-alertmanager
spec:
  type: ClusterIP
  ports:
  - port: 4180
    targetPort: 4180
    protocol: TCP
    name: http
  selector:
    app: oauth2-proxy-alertmanager
