infrastructure/observability/kube-prometheus-stack/resources/oauth2-proxy-alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - alertmanager.ops.last-try.org
    secretName: alertmanager-tls
  rules:
  - host: alertmanager.ops.last-try.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy-alertmanager
            port:
              number: 4180
